Bug 173212 - telnet:// bookmarks don't work
Summary: telnet:// bookmarks don't work
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-21 06:59 UTC by Andrey Kolbasenko
Modified: 2009-04-20 02:05 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey Kolbasenko 2008-10-21 06:59:36 UTC
Version:           4.1.2 (using KDE 4.1.2)
Compiler:          gcc-4.3.2 
OS:                Linux
Installed from:    Gentoo Packages

In kde-3.5.x I have bookmarks like this:
telnet://172.26.1.1 and all work fine.
In konsole 4.1.2 this is not work.
Comment 1 FiNeX 2008-10-22 23:51:02 UTC
I've tried to save a bookmark, it is added an empty entry on the bookmarks. (I'm using current trunk, r874670)
Comment 2 Jason Shein 2008-11-05 15:53:35 UTC
I am having similar issues within Konsole as well. 

The bookmarks do not echo the saved command into the console. I have attempted deleting my bookmarks file, and generating new, with the same results.

Previously generated bookmarks from my KDE 3.5 environment are present in the bookmarks file, and newly added bookmarks do not work either.

Ubuntu 8.10
KDE 4.1.2
Comment 3 Greg Rundlett 2008-11-18 03:13:51 UTC
This is a bug and regression of important functionality in Konsole.  See also 161280 (includes copy/paste workaround) and 174361
Comment 4 Mojmir 2008-12-23 11:05:25 UTC
I am having the same problem.
Bookmarks telnet://host do not work, ssh://same_host does. If I try to create it by editing location in bookmark properties it still does not work. If I type telnet://host in console main window it gets underlined as link and when I right-click and Open Link, it opens normaly in a new window.

Ubuntu 8.10 
2.6.27-9-generic
Konsole2.1
Comment 5 Kurt Hindenburg 2009-02-22 20:04:12 UTC
The KDE 4 bookmark code currently only looks for ssh://

Should we add telnet:// support?
Comment 6 atto 2009-04-16 12:18:59 UTC
Yes, please.
Comment 7 Kurt Hindenburg 2009-04-20 01:03:37 UTC
SVN commit 956374 by hindenburg:

Allow telnet:// to work for bookmarks.

BUG: 173212


 M  +12 -0     SessionController.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=956374
Comment 8 Kurt Hindenburg 2009-04-20 02:05:53 UTC
SVN commit 956384 by hindenburg:

Allow telnet:// to work for bookmarks.

CCBUG: 173212


 M  +12 -0     SessionController.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=956384