Allow telnet:// to work for bookmarks.

BUG: 173212

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=956374